--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.50.0",
