--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@types/node": "^16.18.11",
     "@types/react-dom": "^18.0.10",
     "eslint-import-resolver-typescript": "^3.5.3",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router": "^6.8.1",
-    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "stylelint": "^14.9.1",
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -70,6 +71,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "react-router-dom": "^5.3.4",
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
     "stylelint-order": "5.0.0"
