--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
+    "@types/node": "^18.x",
     "@types/react-dom": "^18.0.10",
     "eslint-import-resolver-typescript": "^3.5.3",
     "history": "^5.3.0",
